# Prog4

./: CMakeLists.txt  README.md
Engine/Core/: Command.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  GameTime.h  Minigin.cpp  Minigin.h  Transform.h
Engine/Events/: Observer.h  Subject.cpp  Subject.h
Engine/Input/: Gamepad.cpp  InputManager.cpp  InputManager.h
Engine/Rendering/: RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  TextComponent.cpp  TextComponent.h  Texture2D.cpp
Engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/UI/: ImGuiManager.cpp  ImGuiManager.h
Game/App/: Main.cpp
Game/Characters/: Character.cpp  Character.h  PengoCharacter.cpp  PengoCharacter.h  SnoBeeCharacter.cpp  SnoBeeCharacter.h
Game/Commands/: AddScoreCommand.cpp  AddScoreCommand.h  GameActorCommand.h  LoseLifeCommand.cpp  LoseLifeCommand.h  MoveCommand.cpp  MoveCommand.h
Game/Components/: AnalogStickMoveComponent.cpp  AnalogStickMoveComponent.h  FPSComponent.cpp  FPSComponent.h  RemainingLivesDisplayComponent.cpp  RemainingLivesDisplayComponent.h  RotationComponent.cpp  RotationComponent.h  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h
Game/Systems/: Achievements.cpp  Achievements.h  State.h
Minigin/: Achievements.cpp  Achievements.h  AddScoreCommand.cpp  AddScoreCommand.h  AnalogStickMoveComponent.cpp  AnalogStickMoveComponent.h  CacheBenchmarkWindow.cpp  CacheBenchmarkWindow.h  Character.cpp  Character.h  Component.cpp  Component.h  Event.h  EventManager.h  FPSComponent.cpp  FPSComponent.h  GameActorCommand.h  GameObject.cpp  GameObject.h  GameTime.h  Gamepad.cpp  Gamepad.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  InputManager.h  LoseLifeCommand.cpp  LoseLifeCommand.h  Main.cpp  Minigin.cpp  Minigin.h  MoveCommand.cpp  MoveCommand.h  Observer.h  PengoCharacter.cpp  PengoCharacter.h  RemainingLivesDisplayComponent.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  (+14 more)
cmake/steam/: FindSteamworks.cmake
